--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
 </table>
 
 <hr noshade="noshade">
-<h2><font color="#005128">Project Title: </font><font><font color="#005128">Clustering Algorithms and Map Reduce Framework- An effective way to handle large datasets</font></font></h2>
+<h2><font color="#005128">Project Title: </font><font><font color="#005128">Performance Comparison of Centroid Based
+Clustering Algorithms</font></font></h2>
 
 <h2><font><font color="#005128">Name: Aagyapal Kaur</font></font></h2>
 
@@ -41,29 +42,19 @@
 Clustering is an essential data mining tool that plays an important role for analysing big data. However, large scale data clustering has become a challenging task because of the large amount of information that emerges from technological progress in many areas, including finance and business informatics. Map Reduce is one of the most famous frameworks, way of handling and processing huge amount of data in context of many complex and large-scale real-life applications. This paper presents the approach of a parallel clustering algorithm based on Map Reduce paradigm to be able to perform clustering on large-scale of data.</p>
 
 <p><b><font color="#005128">Startup Paper(s):</font></b> 
+
+
 <li>
-<a href="https://ieeexplore-ieee-org.proxy.library.carleton.ca/stamp/stamp.jsp?tp=&arnumber=7838193">A Parallel K-Medoids Algorithm for Clustering
-based on MapReduce</a><br></li>
+
+<a href="https://ieeexplore-ieee-org.proxy.library.carleton.ca/stamp/stamp.jsp?tp=&arnumber=6820477">An parallel K-means Clustering Algorithm
+with MapReduce </a><br>
+</li>
+
 <li>
+
 <a href="https://journals-scholarsportal-info.proxy.library.carleton.ca/pdf/23147288/v03i0002/247_pbcoldaortad.xml">Partition based clustering of large datasets using MapReduce framework:
 An analysis of recent themes and directions</a><br>
 </li>
-
-<li>
-<a href="https://link.springer.com/content/pdf/10.1186/s40537-017-0087-2.pdf"</a>Clustering large datasets using K-means
-modified inter and intra clustering (KM-I2C)
-in Hadoop<br>
-</li>
-
-<li>
-<a href="https://journals-scholarsportal-info.proxy.library.carleton.ca/pdf/00380644/v46i0001/107_ibdcaar.xml"</a>Iterative big data clustering algorithms: a review<br>
-</li>
-
-<li>
-<a href="https://ieeexplore-ieee-org.proxy.library.carleton.ca/stamp/stamp.jsp?tp=&arnumber=7938907">An Approach to Enhance the Performance of Hadoop MapReduce Framework for Big
-Data </a>
-</li>
-
 
 
 </p>
@@ -73,7 +64,7 @@ Data </a>
 <ul>
 
   <li>
-    <div align="left"><a href="Literature_Review.pdf"><font color="#000000">Literature Review</font></a> (PDF file created from
+    <div align="left"><a href="LiteratureReview.pdf"><font color="#000000">Literature Review</font></a> (PDF file created from
 LATEX template)</div>
   </li>
   <li>
