--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ statistics etc. The most popular and simplest clustering algorithm is K-means be
 <ul>
 
   <li>
-    <div align="left"><a href="Literaturereview.pdf"><font color="#000000">Literature Review</font></a> (PDF file created from
+    <div align="left"><a href="LiteratureReview.pdf"><font color="#000000">Literature Review</font></a> (PDF file created from
 LATEX template)</div>
   </li>
   <li>
