--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ statistics etc. The most popular and simplest clustering algorithm is K-means be
 LATEX template)</div>
   </li>
   <li>
-    <div align="left"><a href="Presentation_Outline.pdf"><font color="#000000">Presentation Outline</font></a> (PDF file created from
+    <div align="left"><a href="PresentationOutline.pdf"><font color="#000000">Presentation Outline</font></a> (PDF file created from
 LATEX template)</div>
   </li>
   <li>
