--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ Clustering Algorithms</font></font></h2>
 <b><font color="#005128">Project Outline:</font></b><p>In this epoch, data generation advancement are massively and rapidly developed. Collecting any data is possible everywhere and anywhere. There are a lot type of data with various amount of data which stored on
 data warehouse like sales production, satellite orbit lane, disease data, and various data type from many disciplines. Data mining is a technology that combined data analysis method with several massive-data processing algorithm. Data mining were also used to help find and analyze new information from data that ever used with different method.Clustering is one of the most popular methods for
 data analysis, which is prevalent in many disciplines such as image segmentation, bioinformatics, pattern recognition and
-statistics etc. The most popular and simplest clustering algorithm is K-means because of its easy implementation, simplicity, efficiency and empirical success. However, the realworld applications produce huge volumes of data, thus, how to efficiently handle of these data in an important mining task has been a challenging and significant issue. In addition, MPI(Message Passing Interface) as a programming model of message passing presents high performances, scalability and portability.In this project,I intend to compare the performance of Centroid Technique based clustering algorithms using Messaging Passing Interface(MPI). </p>
+statistics etc. The most popular and simplest clustering algorithm is K-means because of its easy implementation, simplicity, efficiency and empirical success. However, the realworld applications produce huge volumes of data, thus, how to efficiently handle of these data in an important mining task has been a challenging and significant issue. In addition, MPI(Message Passing Interface) as a programming model of message passing presents high performances, scalability and portability.In this project,I intend to compare the performance of Centroid Technique based clustering algorithms that includes K-means, K-means++ and Parallel K-means using Messaging Passing Interface(MPI). </p>
 
 <p><b><font color="#005128">Startup Paper(s):</font></b> 
 
@@ -59,7 +59,7 @@ statistics etc. The most popular and simplest clustering algorithm is K-means be
 <ul>
 
   <li>
-    <div align="left"><a href="LiteratureReview.pdf"><font color="#000000">Literature Review</font></a> (PDF file created from
+    <div align="left"><a href="Literature.pdf"><font color="#000000">Literature Review</font></a> (PDF file created from
 LATEX template)</div>
   </li>
   <li>
@@ -74,7 +74,7 @@ Question Sheet </div>
     <div align="left"><a href="Final_Paper.pdf"><font color="#000000">Final
 Paper</font></a> (PDF file created from LATEX template)</div>
   </li>
-  <li><a href="Code_and_Data"><font color="#000000">Code and Data</font></a>
+  <li><a href="code_and_data.rar"><font color="#000000">Code and Data</font></a>
 (put all code, data, etc. into this directory)</li>
 </ul>
 
