--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ LATEX template)</div>
 Question Sheet </div>
   </li>
   <li>
-    <div align="left"><a href="Final_Paper.pdf"><font color="#000000">Final
+    <div align="left"><a href="FinalPaper.pdf"><font color="#000000">Final
 Paper</font></a> (PDF file created from LATEX template)</div>
   </li>
   <li><a href="code_and_data.rar"><font color="#000000">Code and Data</font></a>
