--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </p>
       </td>
       <td height="27" width="45%">
-      <p><b>School of Computer Science</b><br>
+      <p><b>School of Computer </b><br>
       <b>Carleton University, Ottawa, Canada</b></p>
       </td>
     </tr>
